vehicle/tests/golden/error/dataset/mismatchedType/dataset-rat-4.idx
../../../../datasets/dataset-rat-4.idx